--- a/Tickers_Dataset/Ticker_Data_Filtering.ipynb
+++ b/Tickers_Dataset/Ticker_Data_Filtering.ipynb
@@ -196,7 +196,7 @@
     "file_name = \"Filtered_NASDAQ_Listings.csv\"\n",
     "df.to_csv(file_name, index=True)\n",
     "\n",
-    "print(f\"Filtered DataFrame saved as {file_name} in the current directory.\")"
+    "print(f\"Filtered DataFrame saved as {file_name} in the current directory: tickers_dataset\")"
    ]
   }
  ],
