added split ticker symbols.csv

--- a/Tickers_Dataset/Ticker_Data_Filtering.ipynb
+++ b/Tickers_Dataset/Ticker_Data_Filtering.ipynb
@@ -198,6 +198,125 @@
     "\n",
     "print(f\"Filtered DataFrame saved as {file_name} in the current directory: tickers_dataset\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Symbol\n",
+      "0         A\n",
+      "1        AA\n",
+      "2      AACI\n",
+      "3     AACIU\n",
+      "4     AACIW\n",
+      "...     ...\n",
+      "2635    ZTS\n",
+      "2636   ZUMZ\n",
+      "2637    ZUO\n",
+      "2638   ZVIA\n",
+      "2639    ZWS\n",
+      "\n",
+      "[2640 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Since Polygon.io only allows for 5 API calls per minute and each API is allowed 50,000 ticker \n",
+    "# datums we unable to stream all of the minute by minute data for one ticker at a time  \n",
+    "\n",
+    "\n",
+    "df = pd.read_csv('Filtered_NASDAQ_Listings.csv')\n",
+    "\n",
+    "# Filters df to only include symbol columns and index\n",
+    "symbols_df = df[[\"Symbol\"]]\n",
+    "print(symbols_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First half of the DataFrame:\n",
+      "     Symbol\n",
+      "0         A\n",
+      "1        AA\n",
+      "2      AACI\n",
+      "3     AACIU\n",
+      "4     AACIW\n",
+      "...     ...\n",
+      "1315   JRSH\n",
+      "1316   JSPR\n",
+      "1317  JSPRW\n",
+      "1318    JVA\n",
+      "1319    JXN\n",
+      "\n",
+      "[1320 rows x 1 columns]\n",
+      "\n",
+      "Second half of the DataFrame:\n",
+      "     Symbol\n",
+      "1320   JYNT\n",
+      "1321     KA\n",
+      "1322    KAI\n",
+      "1323   KALA\n",
+      "1324    KAR\n",
+      "...     ...\n",
+      "2635    ZTS\n",
+      "2636   ZUMZ\n",
+      "2637    ZUO\n",
+      "2638   ZVIA\n",
+      "2639    ZWS\n",
+      "\n",
+      "[1320 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Splitting the df in half for each partner to process\n",
+    "midpoint = len(symbols_df) // 2\n",
+    "df_first_half = symbols_df.iloc[:midpoint].copy()\n",
+    "df_second_half = symbols_df.iloc[midpoint:].copy()\n",
+    "\n",
+    "print(\"First half of the DataFrame:\")\n",
+    "print(df_first_half)\n",
+    "\n",
+    "print(\"\\nSecond half of the DataFrame:\")\n",
+    "print(df_second_half)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered DataFrame saved as Symbols_First_Half.csv in the current directory: tickers_dataset\n",
+      "Filtered DataFrame saved as Symbols_Second_Half.csv in the current directory: tickers_dataset\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save each half of the df as a csv\n",
+    "symbols_first_half = \"Symbols_First_Half.csv\"\n",
+    "df_first_half.to_csv(symbols_first_half , index=True)\n",
+    "print(f\"Filtered DataFrame saved as {symbols_first_half} in the current directory: tickers_dataset\")\n",
+    "\n",
+    "symbols_second_half = \"Symbols_Second_Half.csv\"\n",
+    "df_second_half.to_csv(symbols_second_half , index=True)\n",
+    "print(f\"Filtered DataFrame saved as {symbols_second_half} in the current directory: tickers_dataset\")"
+   ]
   }
  ],
  "metadata": {
