--- a/Tickers_Dataset/Ticker_Data_Filtering.ipynb
+++ b/Tickers_Dataset/Ticker_Data_Filtering.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ticker Data Filitering \n",
+    "\n",
+    "#### Overview\n",
+    "This file filters a tickers dataset, `Raw_NASDAQ_Listings.csv`, that includes all the symbols of companies currently being traded on NASDAQ. The `Raw_NASDAQ_Listings.csv` includes the folllowing columns: Symbol, Name, Last_Sale, Net_Change, %_Change, Market_Cap, Country, IPO_Year, Volume. This file filters out all rows including company subsidaries, all companies which have IPOed in the last two years, and companies that are not registered to the United States and saves it in a new csv: `Filtered_NASDAQ_Listings.csv`. The `Filtered_NASDAQ_Listings.csv` is used as the input for the `scrape_aggregate_data()`. The `scrape_aggregate_data()` function iterates through the Symbols column in `Filtered_NASDAQ_Listings.csv` and creates a new directory with a Symbol name and the starts scraping the data from Polygon.io 3 months at a time and then places the collection of 2 years worth of stock data in 3 month intervals into the Symbol's respective directory. However sice the Polygon.io API allows for only 5 API calls per minute with each API call limited to 50,000 trades every call, we can only scrape 3 months data every 20 seconds. Sicne our `Filtered_NASDAQ_Listings.csv` has a total of 2640 Symbols with each symbol requiring a total of 8 csv files including 3 months of data each we will need to scrape data for 2 minutes for each Symbol (upper bound). Since we collecting data for 2640 Symbols our total data scraping time will be 88 hours (upper bound). In order to make this more manageable we will be splitting the `Filtered_NASDAQ_Listings.csv` in half with each partner being responsible for collecting the data for half of the Symbols (1320 Symbols each). The `Filtered_NASDAQ_Listings.csv` was filtered to only include the Symbols column and the split into `Symbols_First_half.csv` and `Symbols_Second_half.csv`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -281,21 +291,23 @@
     }
    ],
    "source": [
-    "# Splitting the df in half for each partner to process\n",
+    "# Splitting the symbols_df in half for each partner to process\n",
     "midpoint = len(symbols_df) // 2\n",
     "df_first_half = symbols_df.iloc[:midpoint].copy()\n",
     "df_second_half = symbols_df.iloc[midpoint:].copy()\n",
     "\n",
+    "# First half of the symbols_df\n",
     "print(\"First half of the DataFrame:\")\n",
     "print(df_first_half)\n",
     "\n",
+    "# Second half of the symbols_df\n",
     "print(\"\\nSecond half of the DataFrame:\")\n",
     "print(df_second_half)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,11 +320,13 @@
     }
    ],
    "source": [
-    "# Save each half of the df as a csv\n",
+    "# Save each half of the symbols_df as a csv\n",
+    "# First half of the symbols_df saved as Symbols_First_Half.csv\n",
     "symbols_first_half = \"Symbols_First_Half.csv\"\n",
     "df_first_half.to_csv(symbols_first_half , index=True)\n",
     "print(f\"Filtered DataFrame saved as {symbols_first_half} in the current directory: tickers_dataset\")\n",
     "\n",
+    "# Second half of the symbols_df saved as Symbols_Second_Half.csv\n",
     "symbols_second_half = \"Symbols_Second_Half.csv\"\n",
     "df_second_half.to_csv(symbols_second_half , index=True)\n",
     "print(f\"Filtered DataFrame saved as {symbols_second_half} in the current directory: tickers_dataset\")"
