--- a/Tickers_Dataset/Ticker_Data_Filtering.ipynb
+++ b/Tickers_Dataset/Ticker_Data_Filtering.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -190,14 +190,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered DataFrame saved as Filtered_NASDAQ_Listings.csv in the current directory.\n"
+      "Filtered DataFrame saved as Filtered_NASDAQ_Listings.csv in the current directory: tickers_dataset\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,8 @@
       "2638   ZVIA\n",
       "2639    ZWS\n",
       "\n",
-      "[2640 rows x 1 columns]\n"
+      "[2640 rows x 1 columns]\n",
+      "Filtered DataFrame saved as Symbols_df in the current directory: tickers_dataset\n"
      ]
     }
    ],
@@ -243,13 +244,16 @@
     "df = pd.read_csv('Filtered_NASDAQ_Listings.csv')\n",
     "\n",
     "# Filters df to only include symbol columns and index\n",
+    "symbols = \"Symbols_df\"\n",
     "symbols_df = df[[\"Symbol\"]]\n",
-    "print(symbols_df)"
+    "print(symbols_df)\n",
+    "symbols_df.to_csv(symbols, index=True)\n",
+    "print(f\"Filtered DataFrame saved as {symbols} in the current directory: tickers_dataset\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
